# 3DViewer-in-CPP

./: .gitignore  Makefile  README.md
3DViewer/: CMakeLists.txt
3DViewer/samples/materials/trump/: Trump.mtl
3DViewer/sources/: main.cpp  resources.qrc
3DViewer/sources/controller/: mainviewcontroller.cpp  mainviewcontroller.h
3DViewer/sources/forms/: mainview.ui  settingsdialog.ui
3DViewer/sources/lib/QtGifImage/: CMakeLists.txt
3DViewer/sources/lib/QtGifImage/gifimage/: qgifimage.cpp
3DViewer/sources/model/: scenemodel.h
3DViewer/sources/model/command/: command.h  convertmtldatacommand.h  convertobjdatacommand.h  converttexturedatacommand.h  macrocommand.h  parseobjfilecommand.h  processmtlfilecommand.h  processobjfilecommand.h  processtexturefilecommand.h  savegifcommand.h  saveimagecommand.h  selectdirectorycommand.h  selectfilecommad.h
3DViewer/sources/resources/shaders/: baseshader.frag  baseshader.vert  lightshader.frag  lightshader.vert  normalsshader.frag  normalsshader.vert
3DViewer/sources/resources/styles/: violet.qss
3DViewer/sources/shared/: consts.h  viewsettings.h
3DViewer/sources/shared/mediator/: mediator.cpp  mediator.h  publisher.h
3DViewer/sources/shared/renderer/configuration/: config.h
3DViewer/sources/shared/renderer/meshmodel/: face.h  material.h  meshmodel.h
3DViewer/sources/shared/renderer/raw_data/: obj_data.h
3DViewer/sources/view/: mainview.cpp  mainview.h  scene.cpp  scene.h  settingsdialog.cpp  settingsdialog.h
3DViewer/tests/: test_1.cpp  tests_entry.h
